<resources>
    <string name="app_name">FinalProjectITMD555</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="mainactivity_signin_text">Welcome</string>
    <string name="mainactivity_signedout_text">Signed Out Successfully</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">Password</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="create_account_button">CREATE ACCOUNT</string>
    <string name="sign_out_button">SIGN OUT</string>
    <string name="verify_email_button">VERIFY EMAIL</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_recipes">My Recipes</string>
    <string name="heading_my_top_recipes">My Top Recipes</string>
    <string name="menu_logout">Log Out</string>
    <string name="hint_email">example@example.com</string>
    <string name="email_verification_success_notify">Email Verification Link has been Emailed. Please Check Email.</string>
    <string name="email_verification_failure_notify">Unable To Send Email Verification</string>
</resources>
