<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color_100"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mainicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/ingredients_lockup_400" />

        <!--Insert Theme Here-->
        <TextView
            android:id="@+id/maintitletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin_title"
            android:text="@string/mainactivity_signin_text" />

        <!--Insert Theme Here-->
        <TextView
            android:id="@+id/mainstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainactivity_signedout_text" />

        <TextView
            android:id="@+id/maindetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Firebase User ID: 123456789abc" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@color/gray_color_300">

        <!--Linear Layout for Email and Password Fields-->
        <LinearLayout
            android:id="@+id/email_and_pwd_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/horizontal_margin_activity"
            android:paddingRight="@dimen/vertical_margin_activity">

            <EditText
                android:id="@+id/email_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email_hint_text"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password_hint_text"
                android:inputType="textPassword" />

        </LinearLayout>

        <!--Linear Layout for Email and Password Buttons-->
        <LinearLayout
            android:id="@+id/email_and_pwd_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_and_pwd_fields"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/horizontal_margin_activity"
            android:paddingRight="@dimen/vertical_margin_activity">

            <!--Insert Theme Here-->
            <Button
                android:id="@+id/sign_in_email_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in_button" />

            <!--Insert Theme Here-->
            <Button
                android:id="@+id/create_account_email_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account_button" />

        </LinearLayout>

        <!--Linear Layout for Buttons after Signing In-->
        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/horizontal_margin_activity"
            android:paddingRight="@dimen/vertical_margin_activity"
            android:visibility="gone"
            android:weightSum="2.0">

            <!--Insert Theme Here-->
            <Button
                android:id="@+id/sign_out_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out_button" />

            <!--Insert Theme Here-->
            <Button
                android:id="@+id/verify_email_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verify_email_button" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>